@@ -17,5 +17,6 @@
 #include "merge/pr_generic.h"
 
 int64_t create_track_number(generic_reader_c *reader, int64_t tid);
+void parse_arg_split_chapters(std::string const &arg);
 
 #endif // MTX_MKVMERGE_H
