@@ -227,3 +227,4 @@ T_378deprecated_iso_639_2_codes:hrv+rum+srp-0270a2ad78e5881e406a770709e8393d:pas
 T_379flv:21f4b2199ccd7f55e0e917420f2a2ffb-8c53cc6b896ff2f158c9273d7f453e91-c7435e7e57cb8c63726a4ce1e6a9bddd-8c53cc6b896ff2f158c9273d7f453e91-974aafdd68451f22132d779d49fab69b-e3cdbe4c0713d03fd9e50e56b35ba3af-0d5e4943e929fc6934c7df3beca14099-e3cdbe4c0713d03fd9e50e56b35ba3af-320826707f7cd737569a91e6dcd5be70-c230b5cfb9693c1d99b3c7e16c630071-efbe31f64bccfbaa68f345578a2dca21-c230b5cfb9693c1d99b3c7e16c630071:passed:20121223-134722:2.484513374
 T_380split_frames:02444edaedb0973e04fb8099504cf2fb+72a792e45154d8871a81c3c2460abdc5+ok-02444edaedb0973e04fb8099504cf2fb+72a792e45154d8871a81c3c2460abdc5+ok-deebfea0bda582fcb01dc033b43dfa7c+8fe2d345e841cfc859a74d5cb4b1cdd3+ok:passed:20121223-232902:1.685037717
 T_381X_alac:bf27f11ef2cc46c8490fe6ecfbc9d47c-ed3dd47220947f8130974268f0af281d:passed:20121225-133740:0.088624502
+T_382split_chapters:6f7ee8e4b4385a3d51dbce641c1bb204+480f5ca892d3128672842860c38af07d+ok-d132218e807e60c05890a3e4002d7099+b75f7aefc0069cd5d4c5dabfb6299deb+ok-28e604d054fa4f96190ee8501d9055a7+48c0f3a9adc2ed516f58d202d669c9dd+419eb7bc47f6630c7c37016e891d386d+bd4abacb2f471e29e2eebec89fb03a6b+f89f179099f0e89f2a4607630bec4437+e5a146df6f3710b6aa75947c11d7f5c6+c8c42700d8807cd5a08815889ac284c9+1190151c8f3eb1d6c221c734a513905d+90bd07c29d59fdd3a0796976bef021cc+eaef60a443458a706269003220a773cb+16322deee8b3d3909d4040046f9f2d46+5e418469d9132e5f2a7a97fdfd3af65e+f987e656c9e111d6c1cdb8f1a577d736+25959349da158300b43b0cb8d9907d57+5697ffdebdc66fb65a957e23736e4dfb+d81bf32ac9be2447f81e6a70ec48c20b+f31d12f4fd054b9a14384fda45b22b98+ok-e6dcbd7f767ef0ba3be514a74e30d466+8c866bab2c9204e284a2f8af5432e2d1+6b4472f48b331a2ec1ead4fea8d1ebf4+95af2d46c19582c1401dc491104e8b57+6166056baad9e76c906a6f48c86077db+7eb25007cfd27a2f27997e103ea4e46b+27d9e2870113692f355cbbe508428ac1+f0bf9198aba45219d73ce116a14fbec1+014f146caf1146c47d0c0da3b7166431+6ff64be331b4cc3ccce24d3a87812b57+287cf6a936bff4e05168019b56d66786+785e69058a2e6670d72d0537dbfc9c8f+cc6dce573a5a89fd7cdc21654644b980+f32ed1b68200f88caa64b04ab579e35a+fb3ff756ac0f43bb853179ec68b4af41+09a14d5c690451c08c8bc8772d71cc26+f210df9c6ac53a293e12e17a3bec7cc2+ok:passed:20121227-202501:1.612054564
