@@ -1,3 +1,8 @@
+2012-12-27  Moritz Bunkus  <moritz@bunkus.org>
+
+	* mkvmerge, mmg: new feature: Implemented splitting by chapter
+	numbers. Implements #504 and #814.
+
 2012-12-25  Moritz Bunkus  <moritz@bunkus.org>
 
 	* mkvmerge: enhancement: Removed several warnings from the MPEG-2
